--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "antigravity-cockpit-nano",
-  "displayName": "Antigravity Cockpit Nano",
+  "name": "vscode-nano",
+  "displayName": "Nano",
   "icon": "assets/icon.png",
   "description": "A lightweight, dashboard-style quota monitor for Antigravity AI.",
   "version": "1.0.0",
