--- a/package.json
+++ b/package.json
@@ -31,261 +31,19 @@
   "contributes": {
     "commands": [
       {
-        "command": "agCockpit.open",
-        "title": "Open Antigravity Cockpit",
+        "command": "antigravity.openNano",
+        "title": "Open Antigravity Nano",
         "category": "Antigravity",
         "icon": "$(rocket)"
-      },
-      {
-        "command": "agCockpit.refresh",
-        "title": "Refresh Quota Data",
-        "category": "Antigravity",
-        "icon": "$(sync)"
-      },
-      {
-        "command": "agCockpit.showLogs",
-        "title": "Show Logs",
-        "category": "Antigravity",
-        "icon": "$(output)"
-      },
-      {
-        "command": "agCockpit.retry",
-        "title": "Retry Connection",
-        "category": "Antigravity",
-        "icon": "$(refresh)"
-      },
-      {
-        "command": "agCockpit.openFeedback",
-        "title": "Report Issue / Feedback",
-        "category": "Antigravity",
-        "icon": "$(feedback)"
-      },
-      {
-        "command": "agCockpit.setWarningThreshold",
-        "title": "Set Warning Threshold",
-        "category": "Antigravity"
-      },
-      {
-        "command": "agCockpit.setCriticalThreshold",
-        "title": "Set Critical Threshold",
-        "category": "Antigravity"
-      },
-      {
-        "command": "agCockpit.refreshAnnouncements",
-        "title": "Refresh Announcements",
-        "category": "Antigravity",
-        "icon": "$(bell)"
       }
     ],
     "keybindings": [
       {
-        "command": "agCockpit.open",
+        "command": "antigravity.openNano",
         "key": "ctrl+shift+q",
         "mac": "cmd+shift+q"
-      },
-      {
-        "command": "agCockpit.refresh",
-        "key": "ctrl+shift+r",
-        "mac": "cmd+shift+r",
-        "when": "activeWebviewPanelId == 'antigravity.cockpit'"
       }
-    ],
-    "configuration": {
-      "title": "Antigravity Cockpit",
-      "properties": {
-        "agCockpit.refreshInterval": {
-          "type": "number",
-          "default": 120,
-          "minimum": 10,
-          "maximum": 3600,
-          "description": "Interval in seconds to refresh quota data (10-3600)."
-        },
-        "agCockpit.pinnedModels": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "default": [],
-          "description": "Specific models to monitor in the status bar (e.g. 'gpt-4', 'gemini-1.5-pro'). If empty, monitors the lowest quota model."
-        },
-        "agCockpit.modelOrder": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "default": [],
-          "description": "User-defined order of models in the dashboard."
-        },
-        "agCockpit.modelCustomNames": {
-          "type": "object",
-          "default": {},
-          "description": "Custom display names for models. Maps model IDs to custom names."
-        },
-        "agCockpit.logLevel": {
-          "type": "string",
-          "default": "info",
-          "enum": [
-            "debug",
-            "info",
-            "warn",
-            "error"
-          ],
-          "enumDescriptions": [
-            "Show all logs including debug information",
-            "Show info, warnings and errors",
-            "Show warnings and errors only",
-            "Show errors only"
-          ],
-          "description": "Log level for the output channel."
-        },
-        "agCockpit.notificationEnabled": {
-          "type": "boolean",
-          "default": true,
-          "description": "Show notifications when quota is exhausted or running low."
-        },
-        "agCockpit.statusBarFormat": {
-          "type": "string",
-          "default": "standard",
-          "enum": [
-            "icon",
-            "dot",
-            "percent",
-            "compact",
-            "namePercent",
-            "standard"
-          ],
-          "enumDescriptions": [
-            "Icon only - just 🚀",
-            "Status dot only - 🟢/🟡/🔴",
-            "Percentage only - 95%",
-            "Dot + percentage - 🟢 95%",
-            "Name + percentage - Sonnet: 95%",
-            "Dot + model name + percentage - 🟢 Sonnet: 95% (default)"
-          ],
-          "description": "Format of the status bar display."
-        },
-        "agCockpit.groupingEnabled": {
-          "type": "boolean",
-          "default": true,
-          "description": "Enable quota grouping feature. Models sharing the same quota pool will be grouped together."
-        },
-        "agCockpit.groupingCustomNames": {
-          "type": "object",
-          "default": {},
-          "description": "Custom names for quota groups. Maps model IDs to group names."
-        },
-        "agCockpit.groupingShowInStatusBar": {
-          "type": "boolean",
-          "default": true,
-          "description": "Show quota groups in the status bar instead of individual models."
-        },
-        "agCockpit.pinnedGroups": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "default": [],
-          "description": "Groups to pin to the status bar."
-        },
-        "agCockpit.groupOrder": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "default": [],
-          "description": "User-defined order of groups in the dashboard."
-        },
-        "agCockpit.groupMappings": {
-          "type": "object",
-          "default": {},
-          "description": "Model to group mappings. Used to persist group assignments. Click 'Auto Group' to recalculate based on current quota."
-        },
-        "agCockpit.warningThreshold": {
-          "type": "number",
-          "default": 30,
-          "minimum": 5,
-          "maximum": 80,
-          "description": "Warning threshold percentage. Quota below this value will show yellow warning. (5-80)"
-        },
-        "agCockpit.criticalThreshold": {
-          "type": "number",
-          "default": 10,
-          "minimum": 1,
-          "maximum": 50,
-          "description": "Critical threshold percentage. Quota below this value will show red danger alert. (1-50)"
-        },
-        "agCockpit.displayMode": {
-          "type": "string",
-          "default": "webview",
-          "enum": [
-            "webview",
-            "quickpick"
-          ],
-          "enumDescriptions": [
-            "Full dashboard with Webview (default)",
-            "Lightweight QuickPick menu (better compatibility)"
-          ],
-          "description": "Display mode for quota information. Use 'quickpick' if Webview doesn't work on your system."
-        },
-        "agCockpit.profileHidden": {
-          "type": "boolean",
-          "default": false,
-          "description": "Hide the Plan Details panel in the dashboard."
-        },
-        "agCockpit.viewMode": {
-          "type": "string",
-          "default": "card",
-          "enum": [
-            "card",
-            "list"
-          ],
-          "enumDescriptions": [
-            "Card View (default)",
-            "List View"
-          ],
-          "description": "View mode for displaying quota data in the dashboard."
-        },
-        "agCockpit.dataMasked": {
-          "type": "boolean",
-          "default": false,
-          "description": "Mask sensitive data (email, etc.) in the Plan Details panel."
-        },
-        "agCockpit.telemetryEnabled": {
-          "type": "boolean",
-          "default": false,
-          "description": "Enable anonymous error reporting to help improve the extension. No personal data is collected.",
-          "tags": [
-            "telemetry",
-            "usesOnlineServices"
-          ]
-        },
-        "agCockpit.telemetryDebug": {
-          "type": "boolean",
-          "default": true,
-          "description": "Enable verbose telemetry logs in the developer console. Intended for debugging only."
-        }
-      }
-    },
-    "menus": {
-      "commandPalette": [
-        {
-          "command": "agCockpit.open",
-          "when": "true"
-        },
-        {
-          "command": "agCockpit.refresh",
-          "when": "true"
-        },
-        {
-          "command": "agCockpit.showLogs",
-          "when": "true"
-        },
-        {
-          "command": "agCockpit.retry",
-          "when": "true"
-        }
-      ]
-    }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "npm run build:prod",
