--- a/package.json
+++ b/package.json
@@ -1,80 +1,79 @@
 {
-  "name": "vscode-nano",
-  "displayName": "Nano",
-  "icon": "assets/icon.png",
-  "description": "A lightweight, dashboard-style quota monitor for Antigravity AI.",
-  "version": "1.0.0",
-  "publisher": "slogvo",
-  "engines": {
-    "vscode": "^1.90.0"
-  },
-  "categories": [
-    "Other",
-    "Visualization"
-  ],
-  "keywords": [
-    "antigravity",
-    "ai",
-    "quota",
-    "dashboard",
-    "monitor",
-    "nano"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/slogvo/antigravity-cockpit-nano.git"
-  },
-  "activationEvents": [
-    "onStartupFinished"
-  ],
-  "main": "./out/extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "antigravity.openNano",
-        "title": "Open Antigravity Nano",
-        "category": "Antigravity",
-        "icon": "$(rocket)"
-      }
+    "name": "vscode-nano",
+    "displayName": "Nano",
+    "icon": "assets/icon.png",
+    "description": "A lightweight, dashboard-style quota monitor for Antigravity AI.",
+    "version": "1.0.3",
+    "publisher": "slogvo",
+    "engines": {
+        "vscode": "^1.90.0"
+    },
+    "categories": [
+        "Other",
+        "Visualization"
     ],
-    "keybindings": [
-      {
-        "command": "antigravity.openNano",
-        "key": "ctrl+shift+q",
-        "mac": "cmd+shift+q"
-      }
-    ]
-  },
-  "scripts": {
-    "vscode:prepublish": "npm run build:prod",
-    "compile": "npm run build",
-    "build": "node scripts/build.js",
-    "build:prod": "node scripts/build.js --production",
-    "watch": "npm run watch:esbuild",
-    "watch:esbuild": "node scripts/build.js --watch",
-    "copy-webview": "shx mkdir -p out/view/webview && shx cp src/view/webview/*.css src/view/webview/*.js out/view/webview/",
-    "lint": "eslint src --ext ts",
-    "lint:fix": "eslint src --ext ts --fix",
-    "package": "vsce package",
-    "test": "jest",
-    "pretest": "npm run compile"
-  },
-  "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/node": "^20.0.0",
-    "@types/vscode": "^1.90.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "@vscode/vsce": "^3.7.1",
-    "esbuild": "^0.27.2",
-    "eslint": "^8.57.0",
-    "jest": "^30.2.0",
-    "shx": "^0.4.0",
-    "ts-jest": "^29.4.6",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.0"
-  },
-  "dependencies": {
-    "cron-parser": "^5.4.0"
-  }
+    "keywords": [
+        "antigravity",
+        "ai",
+        "quota",
+        "dashboard",
+        "monitor",
+        "nano"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/slogvo/antigravity-cockpit-nano.git"
+    },
+    "activationEvents": [
+        "onStartupFinished"
+    ],
+    "main": "./out/extension.js",
+    "contributes": {
+        "commands": [
+            {
+                "command": "antigravity.openNano",
+                "title": "Open Antigravity Nano",
+                "category": "Antigravity"
+            }
+        ],
+        "keybindings": [
+            {
+                "command": "antigravity.openNano",
+                "key": "ctrl+shift+q",
+                "mac": "cmd+shift+q"
+            }
+        ]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run build:prod",
+        "compile": "npm run build",
+        "build": "node scripts/build.js",
+        "build:prod": "node scripts/build.js --production",
+        "watch": "npm run watch:esbuild",
+        "watch:esbuild": "node scripts/build.js --watch",
+        "copy-webview": "shx mkdir -p out/view/webview && shx cp src/view/webview/*.css src/view/webview/*.js out/view/webview/",
+        "lint": "eslint src --ext ts",
+        "lint:fix": "eslint src --ext ts --fix",
+        "package": "vsce package",
+        "test": "jest",
+        "pretest": "npm run compile"
+    },
+    "devDependencies": {
+        "@types/jest": "^30.0.0",
+        "@types/node": "^20.0.0",
+        "@types/vscode": "^1.90.0",
+        "@typescript-eslint/eslint-plugin": "^7.0.0",
+        "@typescript-eslint/parser": "^7.0.0",
+        "@vscode/vsce": "^3.7.1",
+        "esbuild": "^0.27.2",
+        "eslint": "^8.57.0",
+        "jest": "^30.2.0",
+        "shx": "^0.4.0",
+        "ts-jest": "^29.4.6",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.0"
+    },
+    "dependencies": {
+        "cron-parser": "^5.4.0"
+    }
 }
